VPN site-à-site

--- a/Lab VPN site-à-site/configs/FGT1.conf
+++ b/Lab VPN site-à-site/configs/FGT1.conf
@@ -21,37 +21,14 @@ config router static
   next
 end
 
-config firewall policy
-  edit 1
-    set name "LAN1_to_WAN"
-    set srcintf "port1"
-    set dstintf "port2"
-    set srcaddr "all"
-    set dstaddr "all"
-    set action accept
-    set schedule "always"
-    set service "ALL"
-    set nat enable
-  next
-  edit 2
-    set name "WAN_to_LAN1"
-    set srcintf "port2"
-    set dstintf "port1"
-    set srcaddr "all"
-    set dstaddr "all"
-    set action accept
-    set schedule "always"
-    set service "ALL"
-  next
-end
-
 config vpn ipsec phase1-interface
   edit "VPN-FG1-FG2"
     set type static
     set interface "port2"
     set remote-gw 10.0.0.2
-    set psksecret your_preshared_key
-    set proposal aes256-sha256 aes192-sha256 aes128-sha256
+    set psksecret "FGT1-FGT2_IPsec!2025#Secure"
+  #  set proposal aes256-sha256 aes192-sha256 aes128-sha256
+    set proposal des-sha256 # Pour le lab
     set dpd-retrycount 3
     set dpd-retryinterval 5
   next
@@ -60,7 +37,8 @@ end
 config vpn ipsec phase2-interface
   edit "VPN-FG1-FG2_Ph2"
     set phase1name "VPN-FG1-FG2"
-    set proposal aes256-sha256 aes192-sha256 aes128-sha256
+   # set proposal aes256-sha256 aes192-sha256 aes128-sha256
+    set proposal des-sha256 # Pour le lab
     set pfs enable
     set src-subnet 192.168.1.0/24
     set dst-subnet 192.168.2.0/24
@@ -68,7 +46,7 @@ config vpn ipsec phase2-interface
 end
 
 config firewall policy
-  edit 3
+  edit 1
     set name "LAN1_to_LAN2_VPN"
     set srcintf "port1"
     set dstintf "VPN-FG1-FG2"
@@ -79,7 +57,7 @@ config firewall policy
     set service "ALL"
     set nat disable
   next
-  edit 4
+  edit 2
     set name "LAN2_to_LAN1_VPN"
     set srcintf "VPN-FG1-FG2"
     set dstintf "port1"
